# ComfyUI_AIIA

./: .gitignore  README.md  TODO.md  __init__.py  aiia_asr_nodes.py  aiia_audio_debug.py  aiia_audio_denoise.py  aiia_audio_enhance.py  aiia_audio_info.py  aiia_audio_isolator.py  aiia_audio_merger.py  aiia_audio_processor.py  aiia_browser_node.py  aiia_cosyvoice_nodes.py  aiia_cosyvoice_nodes.py.bak  aiia_debug_nodes.py  aiia_ditto_nodes.py  aiia_e2e_diarizer.py  aiia_echomimic_nodes.py  aiia_emotion_annotator.py  aiia_float_nodes.py  aiia_generate_segments.py  aiia_image_nodes.py  aiia_indextts_nodes.py  aiia_json_extractor.py  aiia_personalive_nodes.py  aiia_podcast_nodes.py  aiia_podcast_splitter.py  aiia_podcast_stitcher.py  aiia_qwen_nodes.py  aiia_subtitle_nodes.py  aiia_text_splitter.py  aiia_utils_nodes.py  aiia_vibevoice_nodes.py  aiia_vibevoice_preset_maker.py  aiia_vibevoice_realtime_tts.py  aiia_video_nodes.py  aiia_voxcpm_nodes.py  aiia_web_export_nodes.py  check_7b_buffers.py  (+14 more)
examples/: digital-human.json  ditto-talking-head.json  podcast-dialogue.json  voice-cloning-tts.json  voice-conversion.json
js/: aiia_browser.js  aiia_browser_styles.js  aiia_fullscreen_viewer.js  aiia_labels.js  aiia_subtitle_preview.js  aiia_video_nodes.js
libs/CosyVoice/cosyvoice/llm/: llm.py
libs/Ditto/: stream_pipeline_offline.py
libs/Ditto/core/atomic_components/: audio2motion.py  motion_stitch.py  source2info.py
libs/Ditto/core/aux_models/: insightface_det.py
libs/Ditto/core/utils/: load_model.py
libs/Ditto_v1.9.513_backup/core/atomic_components/: audio2motion.py  motion_stitch.py
libs/EchoMimicV3/: app.py  app_mm.py  infer.py
libs/EchoMimicV3/config/: config.yaml
libs/EchoMimicV3/echomimic_v3_src/: face_detect.py  fm_solvers.py  pipeline_wan_fun_inpaint_audio.py  wan_image_encoder.py  wan_transformer3d_audio.py  wan_vae.py
libs/index-tts/indextts/: infer_v2.py
personalive/: wrapper.py  wrapper_trt.py
personalive/liveportrait/: convnextv2.py  motion_extractor.py
personalive/models/: mutual_self_attention.py  pose_guider.py  unet_2d_decoder.py  unet_3d_blocks.py
personalive/models/motion_encoder/: FAN_temporal_feature_extractor.py  encoder.py
personalive/pipelines/: pipeline_pose2vid.py
personalive/utils/: util.py
tests/: manual_test_echomimic.py  test_official_style.py  test_server_final.py  test_server_fix.py  test_spk_key.py  test_subtitle_calibration.py
vibevoice_core/: generation_config.json  generation_config_0.5B.json  generation_config_1.5B.json  generation_config_7B.json  vibevoice_processor.py  vibevoice_streaming_processor.py
vibevoice_core/modular/: configuration_vibevoice_streaming.py  modeling_vibevoice.py  modeling_vibevoice_inference.py  modeling_vibevoice_streaming.py  modeling_vibevoice_streaming_inference.py  modular_vibevoice_diffusion_head.py  modular_vibevoice_tokenizer.py
video_formats_aiia/: h264.json  h265.json
voxcpm_core/voxcpm/: core.py
voxcpm_core/voxcpm/model/: voxcpm.py
(+6 files in other folders)
