[project]
name = "aiia"
description = "The Ultimate AI Audio/Video toolkit for ComfyUI. Features an enhanced Ditto (with optimizations that outperform official demos and other SOTA talking head models in lip-sync accuracy- [x] v1.9.170: Zero-Pressure Speech & Photo Baseline
    - [x] Motion: Implement Laissez-Faire Speech (0% Pressure)
    - [x] Motion: Restore Stable Photo Anchor (No mathematical noise)
    - [x] Motion: Robust Silence Locking (60% Pressure)
    - [x] Update version to 1.9.170 and sync server

- [x] v1.9.169: Neutral Elasticity & Geometric Integrity"
version = "1.9.170"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "hawk", email = "hawk@aiia.ai" }
]
dependencies = [
    "torch",
    "numpy",
    "Pillow",
    "torchaudio",
    "tqdm",
    "scipy",
    "huggingface_hub",
    "opencv-python",
    "ffmpeg-python",
]

[project.urls]
Homepage = "https://github.com/havvk/ComfyUI_AIIA"
Repository = "https://github.com/havvk/ComfyUI_AIIA.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
