[project]
name = "aiia"
description = "The Ultimate AI Audio/Video toolkit for ComfyUI. Features an enhanced Ditto (with optimizations that outperform official demos and other SOTA talking head models in lip-sync accuracy and natural motion), EchoMimic V3 & FLOAT, VibeVoice & CosyVoice 3.0 (Zero-Shot Voice Cloning), Multi-Role Podcast Generation, and a powerful Media Browser."
version = "1.10.8"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "hawk", email = "hawk@aiia.ai" }
]
dependencies = [
    "torch",
    "numpy",
    "Pillow",
    "torchaudio",
    "tqdm",
    "scipy",
    "huggingface_hub",
    "opencv-python",
    "ffmpeg-python",
]

[project.urls]
Homepage = "https://github.com/havvk/ComfyUI_AIIA"
Repository = "https://github.com/havvk/ComfyUI_AIIA.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
