[project]
name = "aiia"
description = "Advanced AI Audio/Video toolkit for ComfyUI. Features Multi-Role Podcast/Dialogue Generation, High-Fidelity Voice Cloning (CosyVoice/VibeVoice/IndexTTS-2), TTS, Media Management, and efficient Video tools."
version = "1.15.3"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Hawk Lee", email = "l.y@live.cn" }
]
keywords = ["ComfyUI", "Audio", "TTS", "Voice Cloning", "Podcast", "Dialogue", "CosyVoice", "VibeVoice", "IndexTTS-2", "Media Management", "Video"]
dependencies = [
    "soundfile",
    "numpy",
    "matplotlib",
    "torchaudio"
]

[project.urls]
Repository = "https://github.com/havvk/ComfyUI_AIIA"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "hawk"
DisplayName = "ComfyUI_AIIA"
Icon = "https://github.com/user-attachments/assets/358b9ca9-59c8-4433-b84c-c150503af04a"

